--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "lucide-react": "^0.314.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
-    "axios": "^1.6.2",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
